fixed comments margins: last comment cut off

--- a/public/stylesheets/less/rp-comments.less
+++ b/public/stylesheets/less/rp-comments.less
@@ -17,7 +17,7 @@
 	transform: translate3d(0px, 0px, 0px) !important;
 	-webkit-transform: translate3d(0px, 0px, 0px) !important;
 	width: 100%;
-	margin-bottom: -32px !important;
+	margin-bottom: 0px !important;
 	// background-color: @rp-background-content !important;
 }
 
